kubernetes/components/homarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr
  namespace: homarr
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      url: "http://homarr.homarr.svc.cluster.local:7575/api/health/ready"
      interval: 60s
      conditions:
        - "[STATUS] == 200"
    homarr.synced/name: "Homarr"
    homarr.synced/icon: "homarr"
    homarr.synced/description: "integrations, drag and drop"
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: websecure
  hostnames:
  - "homarr.${LOCAL_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homarr
      port: 7575
